--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
+    "vuex": "^2.3.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
