--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1",
-    "whatwg-fetch": "^2.0.3"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
